# Exo-MerCat

./: .gitignore  .readthedocs.yaml  README.md  checks.py  config.ini  environment.yml  input_sources.ini  main.py  pyproject.toml  replacements.ini  requirements.txt
.github/workflows/: maintenance.yml  test.yml
docs/: requirements.txt
docs/source/: classes.md  conf.py  index.rst  replacements.md  run_locally.md  run_tap.md  table_headers.md  usage.md
exo_mercat/: catalogs.py  configurations.py  emc.py  epic.py  eu.py  koi.py  nasa.py  oec.py  toi.py  unused_functions.py  utility_functions.py
exomercat/: catalogs.py  configurations.py  emc.py  epic.py  eu.py  koi.py  nasa.py  oec.py
src/exomercat/: catalogs.py  cli.py  emc.py  epic.py  eu.py  koi.py  nasa.py  oec.py  toi.py  utility_functions.py
tests/: emc_test.csv  output.csv  test__catalogs.py  test__emc.py  test__epic.py  test__eu.py  test__koi.py  test__nasa.py  test__oec.py  test__toi.py  test__utility_functions.py
